--- a/OctagonPlatform/Views/Disputes/Details.cshtml
+++ b/OctagonPlatform/Views/Disputes/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model OctagonPlatform.Models.Dispute
+﻿@model OctagonPlatform.Models.FormsViewModels.DisputeViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -18,15 +18,7 @@
         <dd>
             @Html.DisplayFor(model => model.Terminal.TerminalId)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Transaction.TransactionType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Transaction.TransactionType)
-        </dd>
-
+        
         <dt>
             @Html.DisplayNameFor(model => model.Viewed)
         </dt>
@@ -98,87 +90,6 @@
         <dd>
             @Html.DisplayFor(model => model.LastDayToRepresent)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Deleted)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Deleted)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedAt)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.UpdatedByName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UpdatedByName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedByName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CreatedByName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.DeletedByName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DeletedByName)
-        </dd>
-
     </dl>
 </div>
 <p>
