--- a/OctagonPlatform/Views/Disputes/Index.cshtml
+++ b/OctagonPlatform/Views/Disputes/Index.cshtml
@@ -90,8 +90,8 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            @Html.ActionLink("Represent", "Represent", new { id = item.Id })
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id }) |
+            @Html.ActionLink("Represent", "Create","DisputeRepresents", new { id = item.Id },new { @class ="btn" })
         </td>
     </tr>
 }
