update to dispute represent

--- a/OctagonPlatform/Views/Disputes/Index.cshtml
+++ b/OctagonPlatform/Views/Disputes/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
- 
+
 <h2>Index</h2>
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -55,45 +55,50 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Terminal.TerminalId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Viewed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MessageNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NetworkAdjustmentId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Network)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DisputeType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SecuenceNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AmountRequested)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DisputedAmount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastDayToRepresent)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id }) |
-            @Html.ActionLink("Represent", "Create","DisputeRepresents", new { id = item.Id },new { @class ="btn" })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Terminal.TerminalId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Viewed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MessageNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NetworkAdjustmentId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Network)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DisputeType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SecuenceNumber)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.AmountRequested)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DisputedAmount)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastDayToRepresent)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                @if (item.DisputeRepresent == null)
+                {
+                    @Html.ActionLink("Represent", "Create", "DisputeRepresents", new { id = item.Id }, new { @class = "btn" })
+
+                }
+            </td>
+        </tr>
+    }
 
 </table>
