salva para cambiar de cliente de correo

--- a/OctagonPlatform/Views/DisputeRepresents/Create.cshtml
+++ b/OctagonPlatform/Views/DisputeRepresents/Create.cshtml
@@ -15,7 +15,7 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.disputeId)
     <div class="form-horizontal">
-        <h4>DisputeRepresent</h4>`
+        <h4>DisputeRepresent</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <table>
