--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -141,16 +141,16 @@ a {
 }
 
 #footer {
-    position: relative;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
     color: white;
     text-align: center;
     background: gray;
     padding-top: 25px;
     padding-bottom: 15px;
+    width: 100%;
+    height: 10%;
+    position: absolute;
+    bottom: 0;
+    margin-left: 15px;
 }
 
 
