--- a/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/NavBar.cshtml
@@ -5,7 +5,7 @@
 
 
 
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-default" role="navigation" style="margin-bottom: 0">
     <!-- /.navbar-header -->
     <div class="row">
         <div class="col-md-2" >
@@ -116,7 +116,7 @@
     </div>
 
 
-    @Html.Partial("Sections/Sidebar")
+   
     <!-- /.navbar-static-side -->
 </nav>
 
