--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -14,6 +14,8 @@
 @Scripts.Render("~/Scripts/datatables/jquery.datatables.js")
 @Scripts.Render("~/Scripts/datatables/datatables.bootstrap.js")
 @Scripts.Render("https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js")
+@Scripts.Render("~/bundles/jqueryui")
+@Styles.Render("~/Content/cssjqueryui")
 
 
 
