--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="left-sidebar" class="left-sidebar">
-    <div style="position: relative;  width: auto; height: 100%;">
+    <div style="">
     <div class="navbar-default sidebar" role="navigation">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
@@ -30,11 +30,7 @@
                         <i class="fa fa-group fa-fw"></i> Partners
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-edit fa-fw"></i> Reports
-                    </a>
-                </li>
+               
                 <li>
                     <a href="@Url.Action("Index", "TerminalAlerts")">
                         <i class="fa fa-flag fa-fw"></i> Alerts
@@ -44,6 +40,27 @@
                     <a href="@Url.Action("Index", "Disputes")">
                         <i class="fa fa-flag fa-fw"></i> Disputes
                     </a>
+                </li>
+                <li class="">
+                    <a href="#"><i class="fa fa-table fa-fw"></i> Reports<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level collapse" aria-expanded="false" style="height: 0px;">
+                        <li>
+                            <a href="@Url.Action("Index", "Reports")">
+                                <i class="fa fa-flag fa-fw"></i> Create New Reports
+                            </a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("CheckReports", "Reports")">
+                                <i class="fa fa-flag fa-fw"></i> Check Reports Dashboard
+                            </a>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index", "ReportsSmart")">
+                                <i class="fa fa-flag fa-fw"></i> Reports Dashboard
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- /.nav-second-level -->
                 </li>
             </ul>
         </div>
