--- a/OctagonPlatform/Views/DisputeRepresents/Create.cshtml
+++ b/OctagonPlatform/Views/DisputeRepresents/Create.cshtml
@@ -60,10 +60,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttachData, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AttachData, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttachData, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
 
