--- a/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutDashboard.cshtml
@@ -5,19 +5,26 @@
 </head>
 <body>
     <div id="wrapper">
-        <!-- Navigation -->
         @Html.Partial("Sections/NavBar")
-        <div id="page-wrapper" style="margin-top:64px;padding-top:5px;">
-
-            @RenderBody()
+        <div class="row">
+            <div class="col-md-2">@Html.Partial("Sections/Sidebar")</div>
+            <div class="col-md-10">
+                <div id="">
+                    @RenderBody()
+                </div>
+            </div>
         </div>
-       
+
         <!-- /#page-wrapper -->
     </div>
-    @Html.Partial("Sections/Footer")
+    <div class="row">
+        @Html.Partial("Sections/Footer")
+    </div>
     <!-- /#wrapper -->
+
     @Html.Partial("Sections/Scripts")
-@RenderSection("scripts", required: false)
-    @* @RenderSection("scripts", required: false)*@
+    @RenderSection("scripts", false)
+
 </body>
+
 </html>
