ya funciona el autocompletar

--- a/OctagonPlatform/Views/Shared/Sections/Header.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Header.cshtml
@@ -47,6 +47,7 @@
 @Styles.Render("~/Octagon/assets/css/Dashboard.css")
 @Styles.Render("~/Content/datatables/css/datatables.bootstrap.css")
 @Styles.Render("https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css")
+@Styles.Render("~/Content/cssjqueryui")
 <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" type="image/png" href="~/Octagon/assets/img/favicon-16x16.png" sizes="16x16" />
 
