--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -7,6 +7,7 @@
 
 <h2>CashLoad</h2>
 
+<div id="myfirstchart" style="height: 250px;"></div>
 
 @using (Html.BeginForm())
 {
@@ -19,10 +20,19 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal" } })
                 @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
             </div>
         </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(b => b.Status, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+            </div>
+        </div>
+       
 
         <div class="form-group">
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -65,7 +75,30 @@
           $("#StartDate").datepicker({
               dateFormat: "mm/dd/yy"
           });
-      });
+            $('#terminal').autocomplete({
+                source: '@Url.Action("AutoTerminal")'
+        });
+    });
+    new Morris.Line({
+        // ID of the element in which to draw the chart.
+        element: 'myfirstchart',
+        // Chart data records -- each entry in this array corresponds to a point on
+        // the chart.
+        data: [
+            { year: '2008', value: 20 },
+            { year: '2009', value: 10 },
+            { year: '2010', value: 5 },
+            { year: '2011', value: 5 },
+            { year: '2012', value: 20 }
+        ],
+        // The name of the data record attribute that contains x-values.
+        xkey: 'year',
+        // A list of names of data record attributes that contain y-values.
+        ykeys: ['value'],
+        // Labels for the ykeys -- will be displayed when you hover over the
+        // chart.
+        labels: ['Value']
+    });
 </script>
 
 }
