--- a/OctagonPlatform/Views/Shared/_LayoutAdminSB.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutAdminSB.cshtml
@@ -17,7 +17,7 @@
    
     <!-- /#page-wrapper -->
 </div>
-    <div class="row">
+    <div class="navbar navbar-fixed-bottom">
         @Html.Partial("Sections/Footer")
     </div>
 <!-- /#wrapper -->
