--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -7,7 +7,7 @@
 
 <h2>CashLoad</h2>
 
-<div id="myfirstchart" style="height: 250px;"></div>
+
 
 @using (Html.BeginForm())
 {
@@ -22,6 +22,14 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal" } })
                 @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Partner, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Partner, new { htmlAttributes = new { @class = "form-control", @id = "partner" } })
+                @Html.HiddenFor(model => model.PartnerId, new { id = "partnerid" })
+                @Html.ValidationMessageFor(model => model.Partner, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -57,48 +65,44 @@
         </div>
     </div>
 }
-
-
 @Html.Partial("_PartialCashLoadTable")
+
 <div>
     @Html.ActionLink("Back to List", "Index")
+   
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    
+   
 <script>
-      $(function () {
-          $("#EndDate").datepicker({
-              dateFormat: "mm/dd/yy"
-          });
-          $("#StartDate").datepicker({
-              dateFormat: "mm/dd/yy"
-          });
-            $('#terminal').autocomplete({
-                source: '@Url.Action("AutoTerminal")'
+    var projects = [{ value: "12", label: "Don Davis" }, { value: "17", label: "Stan Smith" }]
+  
+    $(function () {
+        $("#EndDate").datepicker({
+            dateFormat: "mm/dd/yy"
         });
+        $("#StartDate").datepicker({
+            dateFormat: "mm/dd/yy"
+        });
+        $('#terminal').autocomplete({
+            source: '@Url.Action("AutoTerminal")'
+          });
+           $('#partner').autocomplete({
+               source: '@Url.Action("AutoPartner")',
+               select: function (event, ui) {
+                 
+                   $("#partner").val(ui.item.label); // display the selected text
+                   $("#partnerid").val(ui.item.value); // save selected id to hidden input
+                   
+                   return false;
+               }
+          });
+          ChartBar();
     });
-    new Morris.Line({
-        // ID of the element in which to draw the chart.
-        element: 'myfirstchart',
-        // Chart data records -- each entry in this array corresponds to a point on
-        // the chart.
-        data: [
-            { year: '2008', value: 20 },
-            { year: '2009', value: 10 },
-            { year: '2010', value: 5 },
-            { year: '2011', value: 5 },
-            { year: '2012', value: 20 }
-        ],
-        // The name of the data record attribute that contains x-values.
-        xkey: 'year',
-        // A list of names of data record attributes that contain y-values.
-        ykeys: ['value'],
-        // Labels for the ykeys -- will be displayed when you hover over the
-        // chart.
-        labels: ['Value']
-    });
+
 </script>
 
 }
+
+
