update a dispute code. when i create  a dispute, duplica a terminal.

--- a/OctagonPlatform/Views/DisputeRepresents/Create.cshtml
+++ b/OctagonPlatform/Views/DisputeRepresents/Create.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Create</h2>
-<h2>Create</h2>
-<h2>Create</h2>
+<h2>Create Dispute</h2>
 
 @using (Html.BeginForm("Create", "DisputeRepresents", FormMethod.Post,
               new { enctype = "multipart/form-data" }))
