--- a/OctagonPlatform/Views/Disputes/Index.cshtml
+++ b/OctagonPlatform/Views/Disputes/Index.cshtml
@@ -5,18 +5,7 @@
     Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
 }
 
-<h2>Index</h2>
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p><p>
-    @Html.ActionLink("Create New", "Create")
-</p><p>
-    @Html.ActionLink("Create New", "Create")
-</p><p>
-    @Html.ActionLink("Create New", "Create")
-</p><p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Disputes</h2>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
