--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -15,6 +15,7 @@
 @Scripts.Render("~/Scripts/datatables/datatables.bootstrap.js")
 @Scripts.Render("https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js")
 @Scripts.Render("~/bundles/jqueryui")
+@Scripts.Render("~/Scripts/export.js")
 
 
 
