--- a/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/CashLoad.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TerminalId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal" } })
+                @Html.EditorFor(model => model.TerminalId, new { htmlAttributes = new { @class = "form-control", @id = "terminal" ,@placeholder = "< All >"} })
                 @Html.ValidationMessageFor(model => model.TerminalId, "", new { @class = "text-danger" })
             </div>
         </div>
