--- a/OctagonPlatform/Views/ReportsSmart/_PartialExcelHead.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialExcelHead.cshtml
@@ -1,12 +1,15 @@
-﻿<table>
+﻿<table width="100%">
    
     <tr >
-        <th style="text-align: left; padding: 8px;background-color: #ecf4f9;height:25pt">Company :</th>
-        <th style="text-align: left; padding: 8px;background-color: #ecf4f9;height:25pt">Oddisey Group</th>
-        <th style="text-align: left; padding: 8px;background-color: #ecf4f9;height:25pt"></th>
-        <th style="text-align: left; padding: 8px;background-color: #ecf4f9;height:25pt"></th>
-        <th style="text-align: left; padding: 8px;background-color: #ecf4f9;height:25pt">Date:</th>
-        <th style="text-align: left; padding: 8px;background-color: #ecf4f9;height:25pt">@DateTime.Now.ToString("MM/dd/yyyy")</th>
+        <th style="text-align: left; padding: 8px;height:25pt" colspan="4">Partner : @TempData["partner"]</th>
+        <th style="text-align: right; padding: 8px;height:25pt" colspan="2">Date: @DateTime.Now.ToString("MM/dd/yyyy")</th>
     </tr>
-    
+    <tr>
+        <th style="text-align: left; padding: 8px;height:25pt" colspan="2">Terminal : @if ((string)TempData["terminal"] == null) { <span>All</span> } else { <span>@TempData["terminal"]</span>}</th>
+        <th style="text-align: center; padding: 8px;height:25pt" colspan="2">From : @TempData["from"]</th>
+        <th style="text-align: right; padding: 8px;height:25pt" colspan="2">To : @TempData["to"]</th>
+    </tr>
+   
+   
+    <tr ><td colspan="6" style="border-collapse:collapse;border-top:1pt solid #808080;height:20px"></td></tr>
 </table>
