ya esta listo el reporting group

--- a/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/SideBar.cshtml
@@ -60,7 +60,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="@Url.Action("Index", "ReportsGroup")">
+                            <a href="@Url.Action("Index", "ReportGroup")">
                                 <i class="fa fa-flag fa-fw"></i> Reporting Groups
                             </a>
                         </li>
