--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -145,8 +145,6 @@ a {
     text-align: center;
     background: gray;
 
-   
-    margin-top: 50px; /* negative value of footer height */
     height: 50px;
     padding-top: 20px;
 }
@@ -232,8 +230,16 @@ a {
     margin-right: -15px;
     margin-left: -15px;
 }
-
-
+.highlight {
+    padding: 9px 14px;
+    margin: 5px;
+    background-color: #f7f7f9;
+    border: 1px solid #e1e1e8;
+    border-radius: 4px;
+}
+#wrapper {
+    margin-bottom: 60px;
+}
 
 .table-sm th, .table-sm td {
     padding: 0.3rem
