--- a/OctagonPlatform/Views/ReportGroup/Index.cshtml
+++ b/OctagonPlatform/Views/ReportGroup/Index.cshtml
@@ -23,7 +23,7 @@
 
                                 <div class="col-md-12">
                                     @Html.Editor("name", new { htmlAttributes = new { @class = "form-control" ,@placeholder = "Name Group",@style="width:100%" } })
-                                    @Html.ValidationMessage("", "", new { @class = "text-danger" })
+                                    @Html.ValidationMessage("", "", new { @class = "text-danger",@id ="error" })
                                 </div>
                             </div>
 
@@ -85,8 +85,14 @@
             $("#CreateGroup").click(function () {
 
                 $.post('@Url.Action("Create", "ReportGroup")', $('#frmgroup').serialize(), function(data) {
-
-                $('#public-methods').selectMultiple('addOption', { value: data.Id, text: data.Name, index: 0 });
+                    
+                    if (data.Id != undefined && data.Name != undefined) {
+                        $('#public-methods').selectMultiple('addOption', { value: data.Id, text: data.Name, index: 0 });
+                        $("#name").val("");
+                        $("#error").html("");
+                    }
+                    else                       
+                       $("#error").html(data);
             },'json');
         });
          $("#DeleteGroup").click(function(){
