--- a/OctagonPlatform/Views/ReportGroup/Index.cshtml
+++ b/OctagonPlatform/Views/ReportGroup/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Index";
 }
 @Styles.Render("~/bundles/selectmulticss")
+@Styles.Render("~/bundles/multiselectcss")
 <div class="row">
     <div class="col-md-4">
         <figure class="highlight">
@@ -65,6 +66,13 @@
     <div class="col-md-8">
         <figure class="highlight">
             Asignar terminales a un grupo
+            <select id='callbacks' multiple='multiple'>
+                <option value='elem_1'>elem 1</option>
+                <option value='elem_2'>elem 2</option>
+                <option value='elem_3'>elem 3</option>
+                <option value='elem_4'>elem 4</option>               
+                <option value='elem_100'>elem 100</option>
+            </select>
         </figure>
     </div>
 
@@ -75,68 +83,10 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/selectmulti")
+    @Scripts.Render("~/bundles/multiselect")
+    @Scripts.Render("~/Scripts/addgroup.js")
 
-    <script>
-
-        $(function () {
-
-            var listid = [];
-
-            $("#CreateGroup").click(function () {
-
-                $.post('@Url.Action("Create", "ReportGroup")', $('#frmgroup').serialize(), function(data) {
-                    
-                    if (data.Id != undefined && data.Name != undefined) {
-                        $('#public-methods').selectMultiple('addOption', { value: data.Id, text: data.Name, index: 0 });
-                        $("#name").val("");
-                        $("#error").html("");
-                    }
-                    else                       
-                       $("#error").html(data);
-            },'json');
-        });
-         $("#DeleteGroup").click(function(){
-
-             $.post('@Url.Action("DeleteAjax", "ReportGroup")', { Ids: listid.toString() }, function (data) {
-
-                 for (var i = 0; i < data.length; i++) {
-                     $("#public-methods option[value='" + data[i] + "']").remove();
-                 }
-                 $('#public-methods').selectMultiple('refresh');
-            },'json');
-         });
-
-        //Select multiple
-         $('#public-methods').selectMultiple({
-
-            afterSelect: function (values) {
-                listid.push(parseInt(values, 10));
-            },
-            afterDeselect: function (values) {
-                var index = listid.indexOf(parseInt(values));
-                if (index > -1) {
-                    listid.splice(index, 1);
-                }
-
-            }
-
-         });
-
-        $('#select-all').click(function () {
-            $('#public-methods').selectMultiple('select_all');
-            return false;
-        });
-        $('#deselect-all').click(function () {
-            $('#public-methods').selectMultiple('deselect_all');
-            return false;
-        });
-
-
-        //end
-
-    });
-
-    </script>
+ 
 
 }
 
