arregle problema en addgroup.js que no estaban bien las url

--- a/OctagonPlatform/Views/ReportGroup/Index.cshtml
+++ b/OctagonPlatform/Views/ReportGroup/Index.cshtml
@@ -81,6 +81,10 @@
 
 
 @section Scripts {
+    <script>
+        var urlcreate ='@Url.Action("Create", "ReportGroup")';
+        var urldelete ='@Url.Action("DeleteAjax", "ReportGroup")';
+    </script>
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/selectmulti")
     @Scripts.Render("~/bundles/multiselect")
