--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -16,6 +16,7 @@
 @Scripts.Render("https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js")
 @Scripts.Render("~/bundles/jqueryui")
 @Scripts.Render("~/Scripts/export.js")
+@Scripts.Render("~/Content/quicksearch/dist/jquery.quicksearch.min.js")
 
 
 
