--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -23,44 +23,49 @@
 
     <div class="col-md-6">
         @*<div class="panel-group" style="width: 100%;">
-            <div class="panel panel-default">
-                <div id="PartnerDetailButtons" class="panel-heading">
-                    <h3 class="texth3"><i class="fa fa-cogs" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Config Notification", "ConfigNotification", "Terminals", new { id = Model.Id }, new AjaxOptions { UpdateTargetId = "getConfigNotification", LoadingElementId = "loading4", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getConfigNotification" })</h3>
-                    <div id="getConfigNotification" class="panel-collapse collapse">
-                        <div class="loader"></div>
+                <div class="panel panel-default">
+                    <div id="PartnerDetailButtons" class="panel-heading">
+                        <h3 class="texth3"><i class="fa fa-cogs" style="font-size:25px;color:#4776a1"></i> @Ajax.ActionLink("Config Notification", "ConfigNotification", "Terminals", new { id = Model.Id }, new AjaxOptions { UpdateTargetId = "getConfigNotification", LoadingElementId = "loading4", InsertionMode = InsertionMode.Replace, HttpMethod = "Post" }, htmlAttributes: new { @class = "link", data_toggle = "collapse", data_target = "#getConfigNotification" })</h3>
+                        <div id="getConfigNotification" class="panel-collapse collapse">
+                            <div class="loader"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>*@
+            </div>*@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
-                <div id="PartnerDetailButtons" class="panel-heading">
-                    <h3 class="texth3"><i class="fa fa-cogs" style="font-size:25px;color:#4776a1"></i>
-                        @Html.Partial("Sections/ConfigNotification", Model)
-                    </h3>
 
+                <a class="texth3" data-toggle="collapse" href="#getConfigNotification">
+                    <i class="fa fa-cogs" style="font-size:25px;color:#4776a1"></i>Config Notification
+                </a>
+
+                <div id="getConfigNotification" class="panel-collapse collapse">
+                    @Html.Partial("Sections/ConfigNotification", Model)
                 </div>
+
             </div>
         </div>
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
-                <div id="PartnerDetailButtons" class="panel-heading">
-                    <h3 class="texth3">
-                        <i class="fa fa-globe" style="font-size:25px;color:#4776a1"></i>
-                        @Ajax.ActionLink("General Info", "GeneralInfo", "Terminals", new { terminalId = Model.Id },
-                   new AjaxOptions {
+                <h3 class="texth3">
+                    <i class="fa fa-globe" style="font-size:25px;color:#4776a1"></i>
+                    @Ajax.ActionLink("General Info", "GeneralInfo", "Terminals", new { terminalId = Model.Id },
+                   new AjaxOptions
+                   {
                        UpdateTargetId = "getGeneralInfo",
                        LoadingElementId = "loading3",
                        InsertionMode = InsertionMode.Replace,
-                       HttpMethod = "Post" },
-                   htmlAttributes: new {
+                       HttpMethod = "Post"
+                   },
+                   htmlAttributes: new
+                   {
                        @class = "link",
                        data_toggle = "collapse",
-                       data_target = "#getGeneralInfo" })
-                    </h3>
-                    <div id="getGeneralInfo" class="panel-collapse collapse">
-                        <div class="loader"></div>
-                    </div>
+                       data_target = "#getGeneralInfo"
+                   })
+                </h3>
+                <div id="getGeneralInfo" class="panel-collapse collapse">
+                    <div class="loader"></div>
                 </div>
             </div>
         </div>
@@ -69,10 +74,10 @@
             <div class="panel panel-default">
                 <div id="PartnerDetailButtons" class="panel-heading">
                     <h3 class="texth3">
-                        
+
                         @Html.Partial("Sections/Cassettes", Model)
                     </h3>
-                    
+
                 </div>
             </div>
         </div>
@@ -142,16 +147,42 @@
         <div class="panel-group" style="width: 100%;">
             <div class="panel panel-default">
                 <div id="Interchanges" class="panel-heading">
-                    
+
                     <i class="fa fa-bank" style="font-size:25px;color:#4776a1"></i><a class="hover"><h3 data-toggle="collapse" data-target="#getInterchange">Interchanges @Html.Partial("Sections/Interchanges", Model)</h3></a>
-                 
-                        <div id="" class="panel-collapse collapse">
-                            <div class="loader"></div>
-                        </div>
-</div>
+
+                    <div id="" class="panel-collapse collapse">
+                        <div class="loader"></div>
+                    </div>
+                </div>
             </div>
         </div>
 
+    </div>
+
+    <div class="panel-group" style="width: 100%;">
+        <div class="panel panel-default">
+            <h3 class="texth3">
+                <i class="fa fa-globe" style="font-size:25px;color:#4776a1"></i>
+                @Ajax.ActionLink("Cash Management", "CashManagement", "Terminals", new { terminalId = Model.TerminalId },
+                   new AjaxOptions
+                   {
+                       UpdateTargetId = "getCashManagement",
+                       LoadingElementId = "loading3",
+                       InsertionMode = InsertionMode.Replace,
+                       HttpMethod = "Post"
+                   },
+                   htmlAttributes: new
+                   {
+                       @class = "link",
+                       data_toggle = "collapse",
+                       data_target = "#getCashManagement"
+                   })
+            </h3>
+
+            <div id="getCashManagement" class="panel-collapse collapse">
+                <div class="loader"></div>
+            </div>
+        </div>
     </div>
 </div>
 @section Scripts {
