--- a/OctagonPlatform/Views/ReportGroup/Index.cshtml
+++ b/OctagonPlatform/Views/ReportGroup/Index.cshtml
@@ -7,115 +7,121 @@
 @Styles.Render("~/bundles/multiselectcss")
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4" style="width: 341px;">
         <figure class="highlight">
             <h5><b>Add Reporting Group </b></h5><hr>
 
             <p>Enter new group name and click.</p>
             <div class="row" style="height: 565px;">
-                <div class="col-lg-8">
-                    <form id="frmgroup">
-                        @Html.AntiForgeryToken()
-
-                        <div class="form-horizontal">
-
-
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="form-group">
-
-                                <div class="col-md-12">
-                                    @Html.Editor("name", new { htmlAttributes = new { @class = "form-control" ,@placeholder = "Name Group",@style="width:100%" } })
-                                    @Html.ValidationMessage("", "", new { @class = "text-danger",@id ="error" })
+                <div class="col-lg-12">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="form-inline">
+                                <div class="form-group">     
+                                    <form id="frmgroup">
+                                    @Html.AntiForgeryToken()
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    @Html.Editor("name", new { htmlAttributes = new { @class = "form-control", @placeholder = "Name Group" } })                                                               
+                                    <input type="button" value="Create" class="btn btn-primary" id="CreateGroup" />
+                                        @Html.ValidationMessage("", "", new { @class = "text-danger", @id = "error" })
+                                        
+                                        </form>
                                 </div>
                             </div>
-
-
+                            <br>
                         </div>
-                    </form>
+                    </div>
                     <div id="groups">
 
 
                         <div class='custom-header'>
                             <ol class="breadcrumb" style="margin:0;background-color: #00a8e1;border-radius: 0;">
-                                <li><a href='#' id='select-all' style="color:white">Select All</a></li>
-                                <li><a href='#' id='deselect-all' style="color:white">None </a></li>
                                 <li><a href='#' id='DeleteGroup' style="color:white">Delete </a></li>
                             </ol>
                         </div>
                         <select id='public-methods' multiple='multiple'>
 
+                           
                             @foreach (var item in Model.ListGroup)
-                                        {
-                            <option value='@item.Id'>@item.Name</option>
+                            {
+                                <option value='@item.Id'>@item.Name</option>
 
-                                        }
+                            }
                         </select>
 
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="form-group">
-                        <div class="col-md-12">
-                            <input type="button" value="Create" class="btn btn-primary" id="CreateGroup" />
-                        </div>
-                    </div>
 
-                </div>
+
             </div>
         </figure>
     </div>
-    <div class="col-md-8">
+    <div class="col-md-8" style="width:73%">
         <figure class="highlight">
 
             <h5><b>Reporting Group Details</b></h5><hr>
             <div class="row">
-           
-                <div class="col-lg-5">
+
+                <div class="col-lg-12">
                     <div class="form-inline">
-                        @Html.Label("Terminals For Partner: ")
+                        <div class="form-group">
+                        @Html.Label("Partner: ")
                         @Html.EditorFor(model => model.Partner, new { htmlAttributes = new { @class = "form-control", @id = "partner", @placeholder = "<All>" } })
-                        @Html.HiddenFor(model => model.PartnerId, new { id = "partnerid" })
-                        @Html.ValidationMessageFor(model => model.Partner, "", new { @class = "text-danger" })
+                        @Html.HiddenFor(model => model.PartId, new { @id = "partnerid" })
+                       
+                        @Html.Label("State: ")
+                        @Html.EditorFor(model => model.State, new { htmlAttributes = new { @class = "form-control", @id = "state", @placeholder = "<All>" } })
+                        @Html.HiddenFor(model => model.StateId, new { @id = "stateid" })
+
+                        @Html.Label("City: ")
+                        @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control", @id = "city", @placeholder = "<All>" } })
+                        @Html.HiddenFor(model => model.CityId, new { @id = "cityid" })
+
+                        @Html.Label("Zip Code: ")
+                        @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "form-control", @id = "zipcode", @placeholder = "<All>" } })
+                       
                         <input type="button" value="Filter" class="btn btn-primary" id="filter" />
+                        <input type="button" value="Clear Filter" class="btn btn-primary" id="clear" />
+                            </div>
                     </div>
-                  <br>
+                    <br>
                 </div>
-               
-                </div>
+
+            </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class='custom-header'>
                         <ol class="breadcrumb" style="margin:0;background-color: #00a8e1;border-radius: 0;">
-                            <li><a href='#' id='select-all' style="color:white">Unassociated Terminals </a></li>
+                            <li><a href='#' id='' style="color:white">Unassociated Terminals </a></li>
+                            <li><a href='#' id='select-all' style="color:white">Select All </a></li>
+                            <li><a href='#' id='deselect-all' style="color:white">Deselect All</a></li>
 
                         </ol>
                     </div>
                     <select id='select1' multiple='multiple'>
-
-                       
+                        
                     </select>
 
                 </div>
             </div>
             <div style="text-align:center">
-                <a href="#" style="margin-right:10px"> <i class="fa fa-angle-double-down fa-3x"></i></a>
-                <a href="#"><i class="fa fa-angle-double-up fa-3x"></i></a>
+                <a href="#" style="margin-right:10px" id="associated"> <i class="fa fa-angle-double-down fa-3x"></i></a>
+                <a href="#" id="unassociated"><i class="fa fa-angle-double-up fa-3x"></i></a>
 
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class='custom-header'>
                         <ol class="breadcrumb" style="margin:0;background-color: #00a8e1;border-radius: 0;">
-                            <li><a href='#' id='select-all' style="color:white">Associated Terminals </a></li>
+                            <li><a href='#' id='' style="color:white">Associated Terminals </a></li>
+                            <li><a href='#' id='select-all1' style="color:white">Select All </a></li>
+                            <li><a href='#' id='deselect-all1' style="color:white">Deselect All</a></li>
+
                         </ol>
                     </div>
                     <select id='select2' multiple='multiple'>
 
-                        @foreach (var item in Model.ListAssociatedTerminals)
-                        {
-
-
-                        }
+                        
                     </select>
 
 
@@ -135,13 +141,14 @@
         var urlcreate ='@Url.Action("Create", "ReportGroup")';
         var urldelete = '@Url.Action("DeleteAjax", "ReportGroup")';
         var urlautopartner = '@Url.Action("AutoPartner", "ReportsSmart")';
-        var urlautogroup = '@Url.Action("AutoGroup")';
+        var urlstate = '@Url.Action("AutoState")';
+        var urlcity = '@Url.Action("AutoCity")';
+        var urlzipcode = '@Url.Action("AutoZipCode")';
         var urlselectgroup = '@Url.Action("DisplayTerminalsByGroup", "ReportGroup")';
     </script>
 
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/selectmulti")
-    @Scripts.Render("~/bundles/multiselect")
     @Scripts.Render("~/Scripts/addgroup.js")
 
 }
