--- a/OctagonPlatform/Views/ReportsSmart/_PartialCashLoadTable.cshtml
+++ b/OctagonPlatform/Views/ReportsSmart/_PartialCashLoadTable.cshtml
@@ -9,20 +9,20 @@
         <ul class="dropdown-menu">
             <li><a href="#" onclick="Export('ReportLoadCash.xls', 'TableLoadCash','idhead');">Excel</a></li>           
             <li><a href="#" onclick="Export('ReportLoadCash.doc', 'TableLoadCash','idhead');">Word</a></li>
-            <li>
+            <li><a href='#' onclick="$('#pdf').click();">Pdf</a></li>
                 @using (Html.BeginForm("Export", "ReportsSmart", FormMethod.Post))
                 {
                     <input type="hidden" name="html" />
                     <input type="submit" id="pdf" onclick="ExportPdf('ReportLoadCash.pdf', 'TableLoadCash','idhead');" value="" style="display:none" />
-                    <a href='#' onclick="$('#pdf').click();" >Pdf</a>
+                   
                 }
             
-            </li>
+            
         </ul>
        
     </div>
   <div id="TableLoadCash" >
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped" width="100%">
     <tr>
         <th>
            Terminal Id
